# LeNet-5-CPP

./: .gitignore  CMakeLists.txt  README.md  build_libs.sh  main.cpp
network/: dense.hpp  layer.hpp
src/: main.cpp
src/dataset/: mnist.cpp
src/dataset/include/: mnist.hpp
src/network/: activation.cpp  activation.hpp  activations.cpp  convolutional.cpp  dense.cpp  dense.hpp  math_utils.cpp  max_pooling.cpp  network.cpp  reshape.cpp  sequential.cpp  softmax.cpp
src/network/include/: activation.hpp  activations.hpp  convolutional.hpp  dense.hpp  layer.hpp  losses.hpp  math_utils.hpp  max_pooling.hpp  network.hpp  reshape.hpp  sequential.hpp  softmax.hpp
